--- a/index.html
+++ b/index.html
@@ -76,13 +76,39 @@
 
 <section class="products">
     <h2>Our Products</h2>
+
+    <div style="text-align:center; margin-bottom:20px;">
+        <img src="ChatGPT Image Jan 26.png" alt="Karthick Coirs Products"
+             style="width:90%; max-width:700px; border-radius:10px;">
+    </div>
+
     <ul>
-        <li><strong>Low EC Cocopeat</strong> – Washed & buffered, ideal for nurseries, vegetables, flowers, and export use.</li>
-        <li><strong>High EC Cocopeat</strong> – Economical option suitable for soil conditioning and non-sensitive crops.</li>
-        <li><strong>Cocopeat Grow Bags</strong> – Ready-to-use grow bags for terrace farming and greenhouse cultivation.</li>
-        <li><strong>Coco Pith for Poultry Farms</strong> – Highly absorbent bedding material to keep floors dry and hygienic.</li>
-        <li><strong>Cocopeat for Nursery</strong> – Lightweight growing media for seedlings, saplings, and polybags.</li>
+        <li>
+            <strong>Low EC Cocopeat</strong> – Washed & buffered, ideal for nurseries, vegetables, flowers, and export use.
+            <br><a href="low-ec-cocopeat.html">View details</a>
+        </li>
+
+        <li>
+            <strong>High EC Cocopeat</strong> – Economical option suitable for soil conditioning and non-sensitive crops.
+            <br><a href="high-ec-cocopeat.html">View details</a>
+        </li>
+
+        <li>
+            <strong>Cocopeat Grow Bags</strong> – Ready-to-use grow bags for terrace farming and greenhouse cultivation.
+            <br><a href="grow-bags.html">View details</a>
+        </li>
+
+        <li>
+            <strong>Coco Pith for Poultry Farms</strong> – Highly absorbent bedding material to keep floors dry and hygienic.
+            <br><a href="poultry-coco-pith.html">View details</a>
+        </li>
+
+        <li>
+            <strong>Cocopeat for Nursery</strong> – Lightweight growing media for seedlings, saplings, and polybags.
+            <br><a href="nursery-cocopeat.html">View details</a>
+        </li>
     </ul>
+    
 </section>
 
 <section>
