--- a/index.html
+++ b/index.html
@@ -73,42 +73,70 @@
         We supply premium Low EC and High EC cocopeat for agriculture, poultry farms, and nurseries, supporting both domestic and export markets.
     </p>
 </section>
-
 <section class="products">
-    <h2>Our Products</h2>
+<h2>Our Products</h2>
 
-    <div style="text-align:center; margin-bottom:20px;">
-        <img src="ChatGPT Image Jan 26.png" alt="Karthick Coirs Products"
-             style="width:90%; max-width:700px; border-radius:10px;">
-    </div>
+<h3>Low EC Cocopeat (5 Kg Blocks & Loose)</h3>
+<p>
+Low EC cocopeat is washed and buffered to remove excess salts, making it ideal for sensitive crops and export use.
+It has excellent water retention, high porosity and uniform texture.
+</p>
+<ul>
+<li>Suitable for nurseries, greenhouse & vegetables</li>
+<li>Promotes strong root growth</li>
+<li>Export & India supply available</li>
+</ul>
 
-    <ul>
-        <li>
-            <strong>Low EC Cocopeat</strong> – Washed & buffered, ideal for nurseries, vegetables, flowers, and export use.
-            <br><a href="low-ec-cocopeat.html">View details</a>
-        </li>
+<h3>High EC Cocopeat (5 Kg Blocks & Loose)</h3>
+<p>
+High EC cocopeat is a natural and economical growing medium used mainly for soil conditioning and non-sensitive crops.
+It improves soil aeration and moisture retention.
+</p>
+<ul>
+<li>Cost effective</li>
+<li>Ideal for landscaping and farming</li>
+<li>Bulk supply available</li>
+</ul>
 
-        <li>
-            <strong>High EC Cocopeat</strong> – Economical option suitable for soil conditioning and non-sensitive crops.
-            <br><a href="high-ec-cocopeat.html">View details</a>
-        </li>
+<h3>Cocopeat Grow Bags</h3>
+<p>
+Cocopeat grow bags are ready-to-use cultivation media filled with premium cocopeat,
+used in greenhouse and terrace farming.
+</p>
+<ul>
+<li>Strong UV-stabilized bags</li>
+<li>Excellent water retention</li>
+<li>Suitable for vegetables & flowers</li>
+</ul>
 
-        <li>
-            <strong>Cocopeat Grow Bags</strong> – Ready-to-use grow bags for terrace farming and greenhouse cultivation.
-            <br><a href="grow-bags.html">View details</a>
-        </li>
+<h3>Poultry Coco Pith</h3>
+<p>
+Coco pith is an excellent poultry bedding material due to its high absorbency and hygiene.
+It keeps poultry floors dry and controls odor.
+</p>
+<ul>
+<li>Highly absorbent</li>
+<li>Eco-friendly and biodegradable</li>
+<li>Ideal for broiler & layer farms</li>
+</ul>
 
-        <li>
-            <strong>Coco Pith for Poultry Farms</strong> – Highly absorbent bedding material to keep floors dry and hygienic.
-            <br><a href="poultry-coco-pith.html">View details</a>
-        </li>
+<h3>Nursery Cocopeat</h3>
+<p>
+Nursery cocopeat is lightweight, porous and ideal for seedlings and young plants.
+It helps healthy root development and improves plant survival.
+</p>
+<ul>
+<li>Used in seed trays and polybags</li>
+<li>Retains moisture and nutrients</li>
+<li>Perfect for nurseries</li>
+</ul>
 
-        <li>
-            <strong>Cocopeat for Nursery</strong> – Lightweight growing media for seedlings, saplings, and polybags.
-            <br><a href="nursery-cocopeat.html">View details</a>
-        </li>
-    </ul>
-    
+<p><strong>Available in:</strong> 5 Kg blocks and loose form</p>
+<p><strong>Supply:</strong> India & Export</p>
+
+<a href="https://wa.me/919363940486" style="display:inline-block;padding:12px 20px;background:#2e7d32;color:white;text-decoration:none;border-radius:5px;">
+Order on WhatsApp
+</a>  
 </section>
 
 <section>
