--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
 </section>
 <section class="products">
 <h2>Our Products</h2>
+<img src="Lowec.jpg" style="width:100%;max-width:700px;border-radius:10px;">
 
 <h3>Low EC Cocopeat (5 Kg Blocks & Loose)</h3>
 <p>
@@ -86,6 +87,7 @@ It has excellent water retention, high porosity and uniform texture.
 <li>Promotes strong root growth</li>
 <li>Export & India supply available</li>
 </ul>
+<img src="Highec.jpg" style="width:100%;max-width:700px;border-radius:10px;">
 
 <h3>High EC Cocopeat (5 Kg Blocks & Loose)</h3>
 <p>
@@ -97,6 +99,7 @@ It improves soil aeration and moisture retention.
 <li>Ideal for landscaping and farming</li>
 <li>Bulk supply available</li>
 </ul>
+<img src="Growbag.jpg" style="width:100%;max-width:700px;border-radius:10px;">
 
 <h3>Cocopeat Grow Bags</h3>
 <p>
@@ -108,6 +111,7 @@ used in greenhouse and terrace farming.
 <li>Excellent water retention</li>
 <li>Suitable for vegetables & flowers</li>
 </ul>
+<img src="Polutary.jpg" style="width:100%;max-width:700px;border-radius:10px;">
 
 <h3>Poultry Coco Pith</h3>
 <p>
@@ -119,6 +123,7 @@ It keeps poultry floors dry and controls odor.
 <li>Eco-friendly and biodegradable</li>
 <li>Ideal for broiler & layer farms</li>
 </ul>
+<img src="Nursery.jpg" style="width:100%;max-width:700px;border-radius:10px;">
 
 <h3>Nursery Cocopeat</h3>
 <p>
