--- a/index.html
+++ b/index.html
@@ -1,170 +1,158 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Karthick Coirs | Cocopeat & Coir Products</title>
-    <style>
-        body {
-            margin: 0;
-            font-family: Arial, sans-serif;
-            background: #f4f8f5;
-            color: #333;
-            line-height: 1.6;
-        }
-        header {
-            background: linear-gradient(135deg, #2e7d32, #6fbf73);
-            color: #fff;
-            padding: 40px 20px;
-            text-align: center;
-        }
-        section {
-            padding: 30px 20px;
-            max-width: 1000px;
-            margin: auto;
-        }
-        h2 {
-            color: #2e7d32;
-        }
-        .products ul {
-            list-style: none;
-            padding: 0;
-        }
-        .products li {
-            background: #fff;
-            margin: 10px 0;
-            padding: 15px;
-            border-left: 5px solid #2e7d32;
-            box-shadow: 0 2px 5px rgba(0,0,0,0.05);
-        }
-        .contact {
-            background: #2e7d32;
-            color: #fff;
-            text-align: center;
-            padding: 30px 20px;
-        }
-        .contact a {
-            color: #fff;
-            text-decoration: none;
-            font-weight: bold;
-        }
-        footer {
-            text-align: center;
-            padding: 10px;
-            background: #1b5e20;
-            color: #fff;
-            font-size: 14px;
-        }
-    </style>
+<meta charset="UTF-8">
+<title>Karthick Coirs | Cocopeat & Coir Products</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<style>
+body{
+    margin:0;
+    font-family:Arial, sans-serif;
+    background:#f3f7f4;
+    color:#333;
+}
+
+header{
+    background:linear-gradient(135deg,#1b5e20,#4caf50);
+    padding:30px;
+    text-align:center;
+    color:white;
+}
+
+.logo{
+    max-width:140px;
+    margin-bottom:15px;
+}
+
+.container{
+    max-width:1100px;
+    margin:auto;
+    padding:20px;
+}
+
+h2{
+    color:#1b5e20;
+    border-bottom:3px solid #4caf50;
+    display:inline-block;
+    padding-bottom:5px;
+}
+
+.products{
+    display:grid;
+    grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+    gap:20px;
+    margin-top:20px;
+}
+
+.card{
+    background:white;
+    border-radius:10px;
+    box-shadow:0 4px 10px rgba(0,0,0,0.1);
+    overflow:hidden;
+}
+
+.card img{
+    width:100%;
+    height:220px;
+    object-fit:cover;
+}
+
+.card h3{
+    margin:15px;
+    color:#1b5e20;
+}
+
+.card p{
+    margin:15px;
+    font-size:14px;
+}
+
+.whatsapp{
+    display:block;
+    background:#25D366;
+    color:white;
+    text-align:center;
+    padding:12px;
+    margin:15px;
+    border-radius:5px;
+    text-decoration:none;
+    font-weight:bold;
+}
+
+.whatsapp:hover{
+    background:#1ebc59;
+}
+
+footer{
+    background:#1b5e20;
+    color:white;
+    text-align:center;
+    padding:15px;
+    margin-top:40px;
+}
+</style>
 </head>
+
 <body>
 
 <header>
+    <img src="Kclogo.jpeg" class="logo">
     <h1>Karthick Coirs</h1>
     <p>Premium Cocopeat & Coir Products Manufacturer</p>
-    <p>Bulk & Export Supply Available</p>
+    <p>📍 Palani, Tamil Nadu | 🇮🇳 India & 🌍 Export</p>
 </header>
 
-<section>
-    <h2>About Us</h2>
-    <p>
-        Karthick Coirs is a trusted manufacturer and supplier of high-quality cocopeat and coir products based in Palani, Tamil Nadu.
-        We supply premium Low EC and High EC cocopeat for agriculture, poultry farms, and nurseries, supporting both domestic and export markets.
-    </p>
-</section>
-<section class="products">
+<div class="container">
+
 <h2>Our Products</h2>
-<img src="Lowec.jpeg" style="width:100%;max-width:700px;border-radius:10px;">
 
-<h3>Low EC Cocopeat (5 Kg Blocks & Loose)</h3>
-<p>
-Low EC cocopeat is washed and buffered to remove excess salts, making it ideal for sensitive crops and export use.
-It has excellent water retention, high porosity and uniform texture.
-</p>
-<ul>
-<li>Suitable for nurseries, greenhouse & vegetables</li>
-<li>Promotes strong root growth</li>
-<li>Export & India supply available</li>
-</ul>
-<img src="Highec.jpeg" style="width:100%;max-width:700px;border-radius:10px;">
+<div class="products">
 
-<h3>High EC Cocopeat (5 Kg Blocks & Loose)</h3>
-<p>
-High EC cocopeat is a natural and economical growing medium used mainly for soil conditioning and non-sensitive crops.
-It improves soil aeration and moisture retention.
-</p>
-<ul>
-<li>Cost effective</li>
-<li>Ideal for landscaping and farming</li>
-<li>Bulk supply available</li>
-</ul>
-<img src="Growbag.jpeg" style="width:100%;max-width:700px;border-radius:10px;">
+<div class="card">
+    <img src="Lowec.jpeg">
+    <h3>Low EC Cocopeat</h3>
+    <p>Washed and buffered cocopeat ideal for vegetables, nurseries and export crops.</p>
+    <a class="whatsapp" href="https://wa.me/919363940486">Order on WhatsApp</a>
+</div>
 
-<h3>Cocopeat Grow Bags</h3>
-<p>
-Cocopeat grow bags are ready-to-use cultivation media filled with premium cocopeat,
-used in greenhouse and terrace farming.
-</p>
-<ul>
-<li>Strong UV-stabilized bags</li>
-<li>Excellent water retention</li>
-<li>Suitable for vegetables & flowers</li>
-</ul>
-<img src="Polutary.jpeg" style="width:100%;max-width:700px;border-radius:10px;">
+<div class="card">
+    <img src="Highec.jpeg">
+    <h3>High EC Cocopeat</h3>
+    <p>Natural cocopeat for soil conditioning, landscaping and farming.</p>
+    <a class="whatsapp" href="https://wa.me/919363940486">Order on WhatsApp</a>
+</div>
 
-<h3>Poultry Coco Pith</h3>
-<p>
-Coco pith is an excellent poultry bedding material due to its high absorbency and hygiene.
-It keeps poultry floors dry and controls odor.
-</p>
-<ul>
-<li>Highly absorbent</li>
-<li>Eco-friendly and biodegradable</li>
-<li>Ideal for broiler & layer farms</li>
-</ul>
-<img src="Nursery.jpeg" style="width:100%;max-width:700px;border-radius:10px;">
+<div class="card">
+    <img src="Growbag.jpeg">
+    <h3>Grow Bags</h3>
+    <p>UV stabilized grow bags filled with premium cocopeat for greenhouse farming.</p>
+    <a class="whatsapp" href="https://wa.me/919363940486">Order on WhatsApp</a>
+</div>
 
-<h3>Nursery Cocopeat</h3>
-<p>
-Nursery cocopeat is lightweight, porous and ideal for seedlings and young plants.
-It helps healthy root development and improves plant survival.
-</p>
-<ul>
-<li>Used in seed trays and polybags</li>
-<li>Retains moisture and nutrients</li>
-<li>Perfect for nurseries</li>
-</ul>
+<div class="card">
+    <img src="Polutary.jpeg">
+    <h3>Poultry Coco Pith</h3>
+    <p>Highly absorbent coco pith for poultry bedding, odor control and hygiene.</p>
+    <a class="whatsapp" href="https://wa.me/919363940486">Order on WhatsApp</a>
+</div>
 
-<p><strong>Available in:</strong> 5 Kg blocks and loose form</p>
-<p><strong>Supply:</strong> India & Export</p>
+<div class="card">
+    <img src="Nursery.jpeg">
+    <h3>Nursery Cocopeat</h3>
+    <p>Perfect medium for seed trays, polybags and plant nurseries.</p>
+    <a class="whatsapp" href="https://wa.me/919363940486">Order on WhatsApp</a>
+</div>
 
-<a href="https://wa.me/919363940486" style="display:inline-block;padding:12px 20px;background:#2e7d32;color:white;text-decoration:none;border-radius:5px;">
-Order on WhatsApp
-</a>  
-</section>
+</div>
 
-<section>
-    <h2>Why Choose Us</h2>
-    <ul>
-        <li>Premium Quality Cocopeat</li>
-        <li>Bulk Supply Capability</li>
-        <li>Export-Ready Products</li>
-        <li>Eco-Friendly & Natural</li>
-        <li>Reliable Service</li>
-    </ul>
-</section>
-
-<div class="contact">
-    <h2>Contact Us</h2>
-    <p><strong>Phone / WhatsApp:</strong> <a href="https://wa.me/919363940486">9363940486</a></p>
-    <p><strong>Email:</strong> <a href="mailto:kccoproducts@gmail.com">kccoproducts@gmail.com</a></p>
-    <p><strong>Location:</strong> Palani, Tamil Nadu, India</p>
 </div>
 
 <footer>
-    © 2026 Karthick Coirs. All Rights Reserved.
+📞 9363940486 | 📧 kccoproducts@gmail.com <br>
+© 2026 Karthick Coirs – All Rights Reserved
 </footer>
 
 </body>
 </html>
+
