--- a/low-ec-cocopeat.html
+++ b/low-ec-cocopeat.html
@@ -4,20 +4,38 @@
 <meta charset="utf-8">
 <title>Low EC Cocopeat | Karthick Coirs</title>
 </head>
-<body>
+<body style="font-family:Arial;background:#f4f8f5;padding:20px;">
 
-        <h1>Low EC Cocopeat</h1>
-        <p>Low EC cocopeat is washed and buffered to remove excess salts. Suitable for export and sensitive crops.</p>
-        <ul>
-            <li>Available in 5 Kg blocks and loose form</li>
-            <li>Excellent water retention</li>
-            <li>Ideal for nursery, greenhouse & vegetables</li>
-            <li>India & Export supply</li>
-        </ul>
-        
-<p><strong>Karthick Coirs</strong></p>
-<p>📞 Phone/WhatsApp: <a href="https://wa.me/919363940486">9363940486</a></p>
-<p>📧 Email: kccocoproducts@gmail.com</p>
-<a href="index.html">← Back to Home</a>
+<h1>Low EC Cocopeat</h1>
+<img src="Lowec.jpeg" style="width:100%;max-width:700px;border-radius:10px;">
+
+<p>
+Low EC Cocopeat is a premium washed and buffered growing medium produced from natural coconut husk.
+It is specially processed to remove excess salts and impurities, making it ideal for sensitive crops and export farming.
+</p>
+
+<p>
+Our Low EC cocopeat has excellent water holding capacity, high porosity and uniform structure.
+This allows plant roots to breathe better and absorb nutrients efficiently.
+</p>
+
+<h3>Applications</h3>
+<ul>
+<li>Greenhouse & polyhouse cultivation</li>
+<li>Nurseries and seedling trays</li>
+<li>Vegetables, flowers and fruits</li>
+<li>Export quality farming</li>
+</ul>
+
+<h3>Available Forms</h3>
+<ul>
+<li>5 Kg blocks</li>
+<li>Loose cocopeat</li>
+</ul>
+
+<p><b>Supplier:</b> Karthick Coirs – Palani, Tamil Nadu</p>
+
+<a href="index.html">⬅ Back to Products</a>
+
 </body>
 </html>
