--- a/index.html
+++ b/index.html
@@ -1,158 +1,68 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
-<title>Karthick Coirs | Cocopeat & Coir Products</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<title>Karthick Coirs</title>
+<meta name="viewport" content="width=device-width,initial-scale=1">
 <style>
-body{
-    margin:0;
-    font-family:Arial, sans-serif;
-    background:#f3f7f4;
-    color:#333;
-}
-
-header{
-    background:linear-gradient(135deg,#1b5e20,#4caf50);
-    padding:30px;
-    text-align:center;
-    color:white;
-}
-
-.logo{
-    max-width:140px;
-    margin-bottom:15px;
-}
-
-.container{
-    max-width:1100px;
-    margin:auto;
-    padding:20px;
-}
-
-h2{
-    color:#1b5e20;
-    border-bottom:3px solid #4caf50;
-    display:inline-block;
-    padding-bottom:5px;
-}
-
-.products{
-    display:grid;
-    grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
-    gap:20px;
-    margin-top:20px;
-}
-
-.card{
-    background:white;
-    border-radius:10px;
-    box-shadow:0 4px 10px rgba(0,0,0,0.1);
-    overflow:hidden;
-}
-
-.card img{
-    width:100%;
-    height:220px;
-    object-fit:cover;
-}
-
-.card h3{
-    margin:15px;
-    color:#1b5e20;
-}
-
-.card p{
-    margin:15px;
-    font-size:14px;
-}
-
-.whatsapp{
-    display:block;
-    background:#25D366;
-    color:white;
-    text-align:center;
-    padding:12px;
-    margin:15px;
-    border-radius:5px;
-    text-decoration:none;
-    font-weight:bold;
-}
-
-.whatsapp:hover{
-    background:#1ebc59;
-}
-
-footer{
-    background:#1b5e20;
-    color:white;
-    text-align:center;
-    padding:15px;
-    margin-top:40px;
-}
+body{margin:0;font-family:Arial;background:#f4f8f5}
+header{background:#1b5e20;color:white;text-align:center;padding:30px}
+header img{height:60px}
+.products{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:20px;padding:20px}
+.card{background:white;border-radius:10px;box-shadow:0 4px 10px rgba(0,0,0,.1)}
+.card img{width:100%;height:200px;object-fit:cover}
+.card h3{padding:10px;color:#1b5e20}
+.card p{padding:0 10px 10px}
+.card a{display:block;background:#2e7d32;color:white;text-align:center;padding:12px;text-decoration:none}
+footer{background:#1b5e20;color:white;text-align:center;padding:15px}
 </style>
 </head>
 
 <body>
-
 <header>
-    <img src="Kclogo.jpeg" class="logo">
-    <h1>Karthick Coirs</h1>
-    <p>Premium Cocopeat & Coir Products Manufacturer</p>
-    <p>📍 Palani, Tamil Nadu | 🇮🇳 India & 🌍 Export</p>
+<img src="Kclogo.jpeg">
+<h1>Karthick Coirs</h1>
+<p>Premium Cocopeat & Coir Products Manufacturer</p>
 </header>
 
-<div class="container">
-
-<h2>Our Products</h2>
-
-<div class="products">
+<section class="products">
 
 <div class="card">
-    <img src="Lowec.jpeg">
-    <h3>Low EC Cocopeat</h3>
-    <p>Washed and buffered cocopeat ideal for vegetables, nurseries and export crops.</p>
-    <a class="whatsapp" href="https://wa.me/919363940486">Order on WhatsApp</a>
+<img src="Lowec.jpeg"><h3>Low EC Cocopeat</h3>
+<p>Washed & buffered cocopeat for export quality farming.</p>
+<a href="low-ec-cocopeat.html">View Product</a>
 </div>
 
 <div class="card">
-    <img src="Highec.jpeg">
-    <h3>High EC Cocopeat</h3>
-    <p>Natural cocopeat for soil conditioning, landscaping and farming.</p>
-    <a class="whatsapp" href="https://wa.me/919363940486">Order on WhatsApp</a>
+<img src="Highec.jpeg"><h3>High EC Cocopeat</h3>
+<p>Natural cocopeat for soil conditioning.</p>
+<a href="high-ec-cocopeat.html">View Product</a>
 </div>
 
 <div class="card">
-    <img src="Growbag.jpeg">
-    <h3>Grow Bags</h3>
-    <p>UV stabilized grow bags filled with premium cocopeat for greenhouse farming.</p>
-    <a class="whatsapp" href="https://wa.me/919363940486">Order on WhatsApp</a>
+<img src="Growbag.jpeg"><h3>Grow Bags</h3>
+<p>Ready to use grow bags for greenhouse.</p>
+<a href="grow-bags.html">View Product</a>
 </div>
 
 <div class="card">
-    <img src="Polutary.jpeg">
-    <h3>Poultry Coco Pith</h3>
-    <p>Highly absorbent coco pith for poultry bedding, odor control and hygiene.</p>
-    <a class="whatsapp" href="https://wa.me/919363940486">Order on WhatsApp</a>
+<img src="Polutary.jpeg"><h3>Poultry Coco Pith</h3>
+<p>Highly absorbent bedding for poultry farms.</p>
+<a href="poultry-coco-pith.html">View Product</a>
 </div>
 
 <div class="card">
-    <img src="Nursery.jpeg">
-    <h3>Nursery Cocopeat</h3>
-    <p>Perfect medium for seed trays, polybags and plant nurseries.</p>
-    <a class="whatsapp" href="https://wa.me/919363940486">Order on WhatsApp</a>
+<img src="Nursery.jpeg"><h3>Nursery Cocopeat</h3>
+<p>Fine cocopeat for seedlings & nurseries.</p>
+<a href="nursery-cocopeat.html">View Product</a>
 </div>
 
-</div>
-
-</div>
+</section>
 
 <footer>
-📞 9363940486 | 📧 kccoproducts@gmail.com <br>
-© 2026 Karthick Coirs – All Rights Reserved
+📞 9363940486 | ✉ kccoproducts@gmail.com  
+<br>© 2026 Karthick Coirs
 </footer>
-
 </body>
 </html>
+
 
