--- a/low-ec-cocopeat.html
+++ b/low-ec-cocopeat.html
@@ -1,41 +1,23 @@
-<!DOCTYPE html>
-<html>
-<head>
-<meta charset="utf-8">
-<title>Low EC Cocopeat | Karthick Coirs</title>
-</head>
-<body style="font-family:Arial;background:#f4f8f5;padding:20px;">
-
+<!DOCTYPE html><html><body style="font-family:Arial;padding:20px">
 <h1>Low EC Cocopeat</h1>
-<img src="Lowec.jpeg" style="width:100%;max-width:700px;border-radius:10px;">
+<img src="Lowec.jpeg" width="100%">
+<p>Low EC Cocopeat is washed and buffered to remove excess salts. It is ideal for export quality farming, greenhouse cultivation, nurseries and sensitive crops.</p>
 
-<p>
-Low EC Cocopeat is a premium washed and buffered growing medium produced from natural coconut husk.
-It is specially processed to remove excess salts and impurities, making it ideal for sensitive crops and export farming.
-</p>
-
-<p>
-Our Low EC cocopeat has excellent water holding capacity, high porosity and uniform structure.
-This allows plant roots to breathe better and absorb nutrients efficiently.
-</p>
-
-<h3>Applications</h3>
+<h3>Technical Specifications</h3>
 <ul>
-<li>Greenhouse & polyhouse cultivation</li>
-<li>Nurseries and seedling trays</li>
-<li>Vegetables, flowers and fruits</li>
-<li>Export quality farming</li>
+<li>EC: Below 0.5</li>
+<li>pH: 5.5 – 6.5</li>
+<li>Moisture: Below 15%</li>
+<li>Expansion: 70 – 75 liters per 5kg block</li>
 </ul>
 
-<h3>Available Forms</h3>
+<h3>Packing</h3>
 <ul>
-<li>5 Kg blocks</li>
-<li>Loose cocopeat</li>
+<li>5kg Blocks</li>
+<li>Loose Cocopeat</li>
 </ul>
 
-<p><b>Supplier:</b> Karthick Coirs – Palani, Tamil Nadu</p>
+<a href="index.html">⬅ Back</a>
+</body></html>
 
-<a href="index.html">⬅ Back to Products</a>
 
-</body>
-</html>
