--- a/high-ec-cocopeat.html
+++ b/high-ec-cocopeat.html
@@ -1,23 +1,46 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
 <title>High EC Cocopeat | Karthick Coirs</title>
+<meta charset="utf-8">
 </head>
-<body>
+<body style="font-family:Arial;background:#f4f8f5;padding:25px">
 
-        <h1>High EC Cocopeat</h1>
-        <p>High EC cocopeat is a cost-effective growing medium suitable for soil conditioning and non-sensitive crops.</p>
-        <ul>
-            <li>5 Kg blocks and loose available</li>
-            <li>Improves soil aeration</li>
-            <li>Used in landscaping & farming</li>
-            <li>Bulk supply available</li>
-        </ul>
-        
-<p><strong>Karthick Coirs</strong></p>
-<p>📞 Phone/WhatsApp: <a href="https://wa.me/919363940486">9363940486</a></p>
-<p>📧 Email: kccocoproducts@gmail.com</p>
-<a href="index.html">← Back to Home</a>
+<h1>High EC Cocopeat</h1>
+<img src="Highec.jpeg" style="width:100%;max-width:700px;border-radius:10px;">
+
+<p>
+High EC Cocopeat is natural, unwashed cocopeat produced from coconut husk pith. It contains higher mineral and salt content, making it suitable for soil conditioning, landscaping and hardy crops.
+</p>
+
+<p>
+This cocopeat improves soil aeration, water retention and root penetration. It is widely used as a cost-effective organic soil conditioner for agriculture, gardening and plantation crops.
+</p>
+
+<h3>Applications</h3>
+<ul>
+<li>Landscaping and gardening</li>
+<li>Open field farming</li>
+<li>Tree plantations</li>
+<li>Ornamental plants</li>
+</ul>
+
+<h3>Benefits</h3>
+<ul>
+<li>Improves soil structure</li>
+<li>Enhances root growth</li>
+<li>Retains moisture</li>
+<li>Eco-friendly</li>
+</ul>
+
+<h3>Packing</h3>
+<ul>
+<li>5 Kg compressed blocks</li>
+<li>Loose cocopeat</li>
+</ul>
+
+<a href="index.html">⬅ Back to Home</a>
+
 </body>
 </html>
+
