--- a/grow-bags.html
+++ b/grow-bags.html
@@ -1,22 +1,46 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
 <title>Cocopeat Grow Bags | Karthick Coirs</title>
+<meta charset="utf-8">
 </head>
-<body>
+<body style="font-family:Arial;background:#f4f8f5;padding:25px">
 
-        <h1>Cocopeat Grow Bags</h1>
-        <p>Ready to use cocopeat grow bags for modern farming and greenhouse cultivation.</p>
-        <ul>
-            <li>Strong UV protected bags</li>
-            <li>Ideal for terrace & greenhouse farming</li>
-            <li>Uniform quality cocopeat</li>
-        </ul>
-        
-<p><strong>Karthick Coirs</strong></p>
-<p>📞 Phone/WhatsApp: <a href="https://wa.me/919363940486">9363940486</a></p>
-<p>📧 Email: kccocoproducts@gmail.com</p>
-<a href="index.html">← Back to Home</a>
+<h1>Cocopeat Grow Bags</h1>
+<img src="Growbag.jpeg" style="width:100%;max-width:700px;border-radius:10px;">
+
+<p>
+Cocopeat Grow Bags are ready-to-use cultivation bags filled with premium quality cocopeat. They are specially designed for greenhouse, polyhouse and terrace farming.
+</p>
+
+<p>
+These grow bags provide excellent drainage, moisture retention and strong root support, resulting in higher crop yield and healthier plants.
+</p>
+
+<h3>Suitable Crops</h3>
+<ul>
+<li>Tomato</li>
+<li>Cucumber</li>
+<li>Capsicum</li>
+<li>Strawberry</li>
+<li>Flowers</li>
+</ul>
+
+<h3>Features</h3>
+<ul>
+<li>UV stabilized bags</li>
+<li>High water holding capacity</li>
+<li>Proper aeration for roots</li>
+<li>Uniform cocopeat filling</li>
+</ul>
+
+<h3>Packing</h3>
+<ul>
+<li>Standard and custom size grow bags</li>
+<li>Bulk supply available</li>
+</ul>
+
+<a href="index.html">⬅ Back to Home</a>
+
 </body>
 </html>
