--- a/poultry-coco-pith.html
+++ b/poultry-coco-pith.html
@@ -1,22 +1,44 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
 <title>Poultry Coco Pith | Karthick Coirs</title>
+<meta charset="utf-8">
 </head>
-<body>
+<body style="font-family:Arial;background:#f4f8f5;padding:25px">
 
-        <h1>Poultry Coco Pith</h1>
-        <p>Highly absorbent coco pith bedding for poultry farms.</p>
-        <ul>
-            <li>Controls moisture and odor</li>
-            <li>Keeps floor dry and clean</li>
-            <li>Eco-friendly and reusable</li>
-        </ul>
-        
-<p><strong>Karthick Coirs</strong></p>
-<p>📞 Phone/WhatsApp: <a href="https://wa.me/919363940486">9363940486</a></p>
-<p>📧 Email: kccocoproducts@gmail.com</p>
-<a href="index.html">← Back to Home</a>
+<h1>Poultry Coco Pith</h1>
+<img src="Polutary.jpeg" style="width:100%;max-width:700px;border-radius:10px;">
+
+<p>
+Poultry Coco Pith is a highly absorbent bedding material made from coconut husk pith. It is widely used in broiler and layer farms to keep poultry floors dry and hygienic.
+</p>
+
+<p>
+It absorbs moisture quickly, controls odor and reduces bacterial growth, creating a healthier environment for birds and reducing disease risk.
+</p>
+
+<h3>Benefits</h3>
+<ul>
+<li>Very high moisture absorption</li>
+<li>Odor control</li>
+<li>Keeps floors dry</li>
+<li>Eco-friendly and biodegradable</li>
+</ul>
+
+<h3>Applications</h3>
+<ul>
+<li>Broiler farms</li>
+<li>Layer farms</li>
+<li>Hatcheries</li>
+</ul>
+
+<h3>Packing</h3>
+<ul>
+<li>Loose coco pith</li>
+<li>Compressed bales</li>
+</ul>
+
+<a href="index.html">⬅ Back to Home</a>
+
 </body>
 </html>
