--- a/nursery-cocopeat.html
+++ b/nursery-cocopeat.html
@@ -1,22 +1,47 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
 <title>Nursery Cocopeat | Karthick Coirs</title>
+<meta charset="utf-8">
 </head>
-<body>
+<body style="font-family:Arial;background:#f4f8f5;padding:25px">
 
-        <h1>Nursery Cocopeat</h1>
-        <p>Premium cocopeat ideal for nursery plants and seedlings.</p>
-        <ul>
-            <li>Lightweight and porous</li>
-            <li>Promotes healthy root growth</li>
-            <li>Used in polybags and seed trays</li>
-        </ul>
-        
-<p><strong>Karthick Coirs</strong></p>
-<p>📞 Phone/WhatsApp: <a href="https://wa.me/919363940486">9363940486</a></p>
-<p>📧 Email: kccocoproducts@gmail.com</p>
-<a href="index.html">← Back to Home</a>
+<h1>Nursery Cocopeat</h1>
+<img src="Nursery.jpeg" style="width:100%;max-width:700px;border-radius:10px;">
+
+<p>
+Nursery Cocopeat is a lightweight, fine-textured growing medium specially prepared for seed trays, polybags and young plants.
+</p>
+
+<p>
+It provides excellent moisture retention and aeration, which improves germination rate, root development and plant survival.
+</p>
+
+<h3>Applications</h3>
+<ul>
+<li>Seed trays</li>
+<li>Polybags</li>
+<li>Saplings</li>
+<li>Horticulture nurseries</li>
+<li>Home gardening</li>
+</ul>
+
+<h3>Benefits</h3>
+<ul>
+<li>High water retention</li>
+<li>Excellent aeration</li>
+<li>Disease-free medium</li>
+<li>Promotes strong roots</li>
+</ul>
+
+<h3>Packing</h3>
+<ul>
+<li>5 Kg compressed blocks</li>
+<li>Loose cocopeat</li>
+</ul>
+
+<a href="index.html">⬅ Back to Home</a>
+
 </body>
 </html>
+
