--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Karthick Coirs</title>
+<title>Karthick Coirs – Cocopeat Exporter</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <style>
-body{margin:0;font-family:Arial;background:#f4f8f5}
+body{margin:0;font-family:Georgia,serif;background:#fff;color:#222}
 header{background:#1b5e20;color:white;text-align:center;padding:30px}
-header img{height:60px}
-.products{display:grid;grid-template-columns:repeat(auto-fit,minmax(250px,1fr));gap:20px;padding:20px}
-.card{background:white;border-radius:10px;box-shadow:0 4px 10px rgba(0,0,0,.1)}
-.card img{width:100%;height:200px;object-fit:cover}
-.card h3{padding:10px;color:#1b5e20}
-.card p{padding:0 10px 10px}
-.card a{display:block;background:#2e7d32;color:white;text-align:center;padding:12px;text-decoration:none}
-footer{background:#1b5e20;color:white;text-align:center;padding:15px}
+header img{height:70px;margin-bottom:10px}
+section{max-width:1100px;margin:auto;padding:40px}
+h2{color:#1b5e20;border-bottom:3px solid #1b5e20}
+.products{display:grid;grid-template-columns:repeat(auto-fit,minmax(280px,1fr));gap:25px}
+.card{border:1px solid #ddd}
+.card img{width:100%;height:220px;object-fit:cover}
+.card div{padding:15px}
+.card a{display:block;background:#1b5e20;color:white;text-align:center;padding:12px;text-decoration:none}
+footer{background:#1b5e20;color:white;text-align:center;padding:20px}
 </style>
 </head>
 
@@ -24,45 +25,61 @@ footer{background:#1b5e20;color:white;text-align:center;padding:15px}
 <p>Premium Cocopeat & Coir Products Manufacturer</p>
 </header>
 
-<section class="products">
+<section>
+<h2>Our Products</h2>
+<div class="products">
 
 <div class="card">
-<img src="Lowec.jpeg"><h3>Low EC Cocopeat</h3>
-<p>Washed & buffered cocopeat for export quality farming.</p>
-<a href="low-ec-cocopeat.html">View Product</a>
+<img src="Lowec.jpeg">
+<div>
+<h3>Low EC Cocopeat</h3>
+<p>Washed and buffered cocopeat for greenhouse and export quality crops.</p>
+</div>
+<a href="low-ec-cocopeat.html">View Details</a>
 </div>
 
 <div class="card">
-<img src="Highec.jpeg"><h3>High EC Cocopeat</h3>
-<p>Natural cocopeat for soil conditioning.</p>
-<a href="high-ec-cocopeat.html">View Product</a>
+<img src="Highec.jpeg">
+<div>
+<h3>High EC Cocopeat</h3>
+<p>Natural cocopeat used for soil conditioning and farming.</p>
+</div>
+<a href="high-ec-cocopeat.html">View Details</a>
 </div>
 
 <div class="card">
-<img src="Growbag.jpeg"><h3>Grow Bags</h3>
-<p>Ready to use grow bags for greenhouse.</p>
-<a href="grow-bags.html">View Product</a>
+<img src="Growbag.jpeg">
+<div>
+<h3>Grow Bags</h3>
+<p>Premium cocopeat grow bags for vegetable and flower cultivation.</p>
+</div>
+<a href="grow-bags.html">View Details</a>
 </div>
 
 <div class="card">
-<img src="Polutary.jpeg"><h3>Poultry Coco Pith</h3>
-<p>Highly absorbent bedding for poultry farms.</p>
-<a href="poultry-coco-pith.html">View Product</a>
+<img src="Polutary.jpeg">
+<div>
+<h3>Poultry Coco Pith</h3>
+<p>Highly absorbent poultry bedding material.</p>
+</div>
+<a href="poultry-coco-pith.html">View Details</a>
 </div>
 
 <div class="card">
-<img src="Nursery.jpeg"><h3>Nursery Cocopeat</h3>
-<p>Fine cocopeat for seedlings & nurseries.</p>
-<a href="nursery-cocopeat.html">View Product</a>
+<img src="Nursery.jpeg">
+<div>
+<h3>Nursery Cocopeat</h3>
+<p>Fine cocopeat for seedlings and nurseries.</p>
+</div>
+<a href="nursery-cocopeat.html">View Details</a>
 </div>
 
+</div>
 </section>
 
 <footer>
-📞 9363940486 | ✉ kccoproducts@gmail.com  
-<br>© 2026 Karthick Coirs
+📞 9363940486 | ✉ kccoproducts@gmail.com <br>
+© 2026 Karthick Coirs – Palani, Tamil Nadu
 </footer>
 </body>
 </html>
-
-
