--- a/low-ec-cocopeat.html
+++ b/low-ec-cocopeat.html
@@ -1,23 +1,53 @@
-<!DOCTYPE html><html><body style="font-family:Arial;padding:20px">
-<h1>Low EC Cocopeat</h1>
-<img src="Lowec.jpeg" width="100%">
-<p>Low EC Cocopeat is washed and buffered to remove excess salts. It is ideal for export quality farming, greenhouse cultivation, nurseries and sensitive crops.</p>
+<!DOCTYPE html>
+<html>
+<head>
+<title>Low EC Cocopeat | Karthick Coirs</title>
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<style>
+body{font-family:Georgia,serif;margin:0;background:#fff;color:#222}
+header{background:#1b5e20;color:white;text-align:center;padding:25px}
+section{max-width:900px;margin:auto;padding:40px}
+h2{color:#1b5e20;border-bottom:3px solid #1b5e20}
+img{width:100%;border:3px solid #1b5e20;margin:20px 0}
+footer{background:#1b5e20;color:white;text-align:center;padding:15px}
+a{color:#1b5e20;text-decoration:none;font-weight:bold}
+</style>
+</head>
 
-<h3>Technical Specifications</h3>
+<body>
+<header>
+<h1>Karthick Coirs</h1>
+<p>Export Quality Cocopeat Manufacturer</p>
+</header>
+
+<section>
+<h2>Low EC Cocopeat</h2>
+<img src="Lowec.jpeg">
+
+<p>
+Low EC Cocopeat is washed and buffered to remove excess salts and impurities.
+It is ideal for sensitive crops, nurseries and export quality farming.
+It offers excellent water retention and air porosity which supports strong root growth.
+</p>
+
+<h3>Applications</h3>
 <ul>
-<li>EC: Below 0.5</li>
-<li>pH: 5.5 – 6.5</li>
-<li>Moisture: Below 15%</li>
-<li>Expansion: 70 – 75 liters per 5kg block</li>
+<li>Greenhouse & polyhouse farming</li>
+<li>Vegetable and flower cultivation</li>
+<li>Nurseries and seed trays</li>
+<li>Hydroponics</li>
 </ul>
 
 <h3>Packing</h3>
 <ul>
-<li>5kg Blocks</li>
-<li>Loose Cocopeat</li>
+<li>5 Kg compressed blocks</li>
+<li>Loose cocopeat</li>
+<li>Export pallet packing available</li>
 </ul>
 
-<a href="index.html">⬅ Back</a>
-</body></html>
+<a href="index.html">⬅ Back to Products</a>
+</section>
 
-
+<footer>© 2026 Karthick Coirs</footer>
+</body>
+</html>
