--- a/high-ec-cocopeat.html
+++ b/high-ec-cocopeat.html
@@ -2,45 +2,49 @@
 <html>
 <head>
 <title>High EC Cocopeat | Karthick Coirs</title>
-<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<style>
+body{font-family:Georgia,serif;margin:0;background:#fff;color:#222}
+header{background:#1b5e20;color:white;text-align:center;padding:25px}
+section{max-width:900px;margin:auto;padding:40px}
+h2{color:#1b5e20;border-bottom:3px solid #1b5e20}
+img{width:100%;border:3px solid #1b5e20;margin:20px 0}
+footer{background:#1b5e20;color:white;text-align:center;padding:15px}
+a{color:#1b5e20;text-decoration:none;font-weight:bold}
+</style>
 </head>
-<body style="font-family:Arial;background:#f4f8f5;padding:25px">
 
-<h1>High EC Cocopeat</h1>
-<img src="Highec.jpeg" style="width:100%;max-width:700px;border-radius:10px;">
+<body>
+<header>
+<h1>Karthick Coirs</h1>
+</header>
+
+<section>
+<h2>High EC Cocopeat</h2>
+<img src="Highec.jpeg">
 
 <p>
-High EC Cocopeat is natural, unwashed cocopeat produced from coconut husk pith. It contains higher mineral and salt content, making it suitable for soil conditioning, landscaping and hardy crops.
-</p>
-
-<p>
-This cocopeat improves soil aeration, water retention and root penetration. It is widely used as a cost-effective organic soil conditioner for agriculture, gardening and plantation crops.
+High EC Cocopeat is natural, unwashed cocopeat used for soil conditioning and hardy crops.
+It improves soil aeration, moisture retention and root penetration.
 </p>
 
 <h3>Applications</h3>
 <ul>
-<li>Landscaping and gardening</li>
+<li>Landscaping</li>
 <li>Open field farming</li>
 <li>Tree plantations</li>
 <li>Ornamental plants</li>
 </ul>
 
-<h3>Benefits</h3>
-<ul>
-<li>Improves soil structure</li>
-<li>Enhances root growth</li>
-<li>Retains moisture</li>
-<li>Eco-friendly</li>
-</ul>
-
 <h3>Packing</h3>
 <ul>
-<li>5 Kg compressed blocks</li>
+<li>5 Kg blocks</li>
 <li>Loose cocopeat</li>
 </ul>
 
-<a href="index.html">⬅ Back to Home</a>
+<a href="index.html">⬅ Back to Products</a>
+</section>
 
+<footer>© 2026 Karthick Coirs</footer>
 </body>
 </html>
-
