--- a/grow-bags.html
+++ b/grow-bags.html
@@ -1,20 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Cocopeat Grow Bags | Karthick Coirs</title>
-<meta charset="utf-8">
+<title>Cocopeat Grow Bags</title>
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<style>
+body{font-family:Georgia,serif;margin:0;background:#fff;color:#222}
+header{background:#1b5e20;color:white;text-align:center;padding:25px}
+section{max-width:900px;margin:auto;padding:40px}
+h2{color:#1b5e20;border-bottom:3px solid #1b5e20}
+img{width:100%;border:3px solid #1b5e20;margin:20px 0}
+footer{background:#1b5e20;color:white;text-align:center;padding:15px}
+a{color:#1b5e20;text-decoration:none;font-weight:bold}
+</style>
 </head>
-<body style="font-family:Arial;background:#f4f8f5;padding:25px">
 
-<h1>Cocopeat Grow Bags</h1>
-<img src="Growbag.jpeg" style="width:100%;max-width:700px;border-radius:10px;">
+<body>
+<header><h1>Karthick Coirs</h1></header>
+
+<section>
+<h2>Cocopeat Grow Bags</h2>
+<img src="Growbag.jpeg">
 
 <p>
-Cocopeat Grow Bags are ready-to-use cultivation bags filled with premium quality cocopeat. They are specially designed for greenhouse, polyhouse and terrace farming.
-</p>
-
-<p>
-These grow bags provide excellent drainage, moisture retention and strong root support, resulting in higher crop yield and healthier plants.
+Cocopeat grow bags are ready-to-use cultivation media for greenhouse and terrace farming.
+They provide excellent drainage, moisture retention and healthy root growth.
 </p>
 
 <h3>Suitable Crops</h3>
@@ -26,21 +35,9 @@ These grow bags provide excellent drainage, moisture retention and strong root s
 <li>Flowers</li>
 </ul>
 
-<h3>Features</h3>
-<ul>
-<li>UV stabilized bags</li>
-<li>High water holding capacity</li>
-<li>Proper aeration for roots</li>
-<li>Uniform cocopeat filling</li>
-</ul>
+<a href="index.html">⬅ Back to Products</a>
+</section>
 
-<h3>Packing</h3>
-<ul>
-<li>Standard and custom size grow bags</li>
-<li>Bulk supply available</li>
-</ul>
-
-<a href="index.html">⬅ Back to Home</a>
-
+<footer>© 2026 Karthick Coirs</footer>
 </body>
 </html>
