--- a/poultry-coco-pith.html
+++ b/poultry-coco-pith.html
@@ -1,44 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Poultry Coco Pith | Karthick Coirs</title>
-<meta charset="utf-8">
+<title>Poultry Coco Pith</title>
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<style>
+body{font-family:Georgia,serif;margin:0;background:#fff;color:#222}
+header{background:#1b5e20;color:white;text-align:center;padding:25px}
+section{max-width:900px;margin:auto;padding:40px}
+h2{color:#1b5e20;border-bottom:3px solid #1b5e20}
+img{width:100%;border:3px solid #1b5e20;margin:20px 0}
+footer{background:#1b5e20;color:white;text-align:center;padding:15px}
+a{color:#1b5e20;text-decoration:none;font-weight:bold}
+</style>
 </head>
-<body style="font-family:Arial;background:#f4f8f5;padding:25px">
 
-<h1>Poultry Coco Pith</h1>
-<img src="Polutary.jpeg" style="width:100%;max-width:700px;border-radius:10px;">
+<body>
+<header><h1>Karthick Coirs</h1></header>
+
+<section>
+<h2>Poultry Coco Pith</h2>
+<img src="Polutary.jpeg">
 
 <p>
-Poultry Coco Pith is a highly absorbent bedding material made from coconut husk pith. It is widely used in broiler and layer farms to keep poultry floors dry and hygienic.
+Poultry coco pith is highly absorbent bedding material used in broiler and layer farms.
+It controls moisture and odor, keeping poultry houses clean and healthy.
 </p>
 
-<p>
-It absorbs moisture quickly, controls odor and reduces bacterial growth, creating a healthier environment for birds and reducing disease risk.
-</p>
+<a href="index.html">⬅ Back to Products</a>
+</section>
 
-<h3>Benefits</h3>
-<ul>
-<li>Very high moisture absorption</li>
-<li>Odor control</li>
-<li>Keeps floors dry</li>
-<li>Eco-friendly and biodegradable</li>
-</ul>
-
-<h3>Applications</h3>
-<ul>
-<li>Broiler farms</li>
-<li>Layer farms</li>
-<li>Hatcheries</li>
-</ul>
-
-<h3>Packing</h3>
-<ul>
-<li>Loose coco pith</li>
-<li>Compressed bales</li>
-</ul>
-
-<a href="index.html">⬅ Back to Home</a>
-
+<footer>© 2026 Karthick Coirs</footer>
 </body>
 </html>
