--- a/nursery-cocopeat.html
+++ b/nursery-cocopeat.html
@@ -1,47 +1,35 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Nursery Cocopeat | Karthick Coirs</title>
-<meta charset="utf-8">
+<title>Nursery Cocopeat</title>
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<style>
+body{font-family:Georgia,serif;margin:0;background:#fff;color:#222}
+header{background:#1b5e20;color:white;text-align:center;padding:25px}
+section{max-width:900px;margin:auto;padding:40px}
+h2{color:#1b5e20;border-bottom:3px solid #1b5e20}
+img{width:100%;border:3px solid #1b5e20;margin:20px 0}
+footer{background:#1b5e20;color:white;text-align:center;padding:15px}
+a{color:#1b5e20;text-decoration:none;font-weight:bold}
+</style>
 </head>
-<body style="font-family:Arial;background:#f4f8f5;padding:25px">
 
-<h1>Nursery Cocopeat</h1>
-<img src="Nursery.jpeg" style="width:100%;max-width:700px;border-radius:10px;">
+<body>
+<header><h1>Karthick Coirs</h1></header>
+
+<section>
+<h2>Nursery Cocopeat</h2>
+<img src="Nursery.jpeg">
 
 <p>
-Nursery Cocopeat is a lightweight, fine-textured growing medium specially prepared for seed trays, polybags and young plants.
+Nursery cocopeat is a lightweight, fine-textured growing medium ideal for seedlings,
+polybags and horticulture nurseries. It improves germination and root growth.
 </p>
 
-<p>
-It provides excellent moisture retention and aeration, which improves germination rate, root development and plant survival.
-</p>
+<a href="index.html">⬅ Back to Products</a>
+</section>
 
-<h3>Applications</h3>
-<ul>
-<li>Seed trays</li>
-<li>Polybags</li>
-<li>Saplings</li>
-<li>Horticulture nurseries</li>
-<li>Home gardening</li>
-</ul>
-
-<h3>Benefits</h3>
-<ul>
-<li>High water retention</li>
-<li>Excellent aeration</li>
-<li>Disease-free medium</li>
-<li>Promotes strong roots</li>
-</ul>
-
-<h3>Packing</h3>
-<ul>
-<li>5 Kg compressed blocks</li>
-<li>Loose cocopeat</li>
-</ul>
-
-<a href="index.html">⬅ Back to Home</a>
-
+<footer>© 2026 Karthick Coirs</footer>
 </body>
 </html>
 
