--- a/index.html
+++ b/index.html
@@ -80,6 +80,35 @@ footer{background:#1b5e20;color:white;text-align:center;padding:20px}
 <footer>
 📞 9363940486 | ✉ kccoproducts@gmail.com <br>
 © 2026 Karthick Coirs – Palani, Tamil Nadu
+<section style="max-width:1000px;margin:auto;padding:40px;background:#f4f8f5;">
+<h2 style="color:#1b5e20;border-bottom:3px solid #1b5e20;">Product Enquiry</h2>
+
+<form action="https://formsubmit.co/kccoproducts@gmail.com" method="POST" style="background:white;padding:20px;border-radius:10px;box-shadow:0 0 10px rgba(0,0,0,.1);">
+<input type="text" name="name" placeholder="Your Name" required style="width:100%;padding:10px;margin:10px 0;">
+<input type="email" name="email" placeholder="Your Email" required style="width:100%;padding:10px;margin:10px 0;">
+<input type="text" name="product" placeholder="Product Interested (Low EC, Grow Bag etc)" required style="width:100%;padding:10px;margin:10px 0;">
+<textarea name="message" placeholder="Your Requirement" required style="width:100%;padding:10px;margin:10px 0;height:120px;"></textarea>
+<button type="submit" style="background:#1b5e20;color:white;padding:12px 25px;border:none;">Send Enquiry</button>
+</form>
+
+<h2 style="color:#1b5e20;margin-top:50px;border-bottom:3px solid #1b5e20;">Export Packing & Container Loading</h2>
+<p>
+Karthick Coirs supplies cocopeat in 5 kg compressed blocks and loose form packed in strong poly wrapping.
+Products are palletized and shrink-wrapped for safe container loading.
+</p>
+<ul>
+<li>20 FT container – up to 18 MT</li>
+<li>40 FT container – up to 26 MT</li>
+<li>Moisture-proof export packing</li>
+<li>Custom buyer labeling available</li>
+</ul>
+
+<h2 style="color:#1b5e20;margin-top:50px;border-bottom:3px solid #1b5e20;">Why Buy from Karthick Coirs?</h2>
+<p>
+Karthick Coirs is a trusted cocopeat manufacturer from Palani, Tamil Nadu supplying to India and export markets.
+We offer consistent quality, bulk supply, competitive pricing and reliable delivery.
+</p>
+</section>
 </footer>
 </body>
 </html>
