--- a/index.html
+++ b/index.html
@@ -21,10 +21,27 @@ footer{background:#1b5e20;color:white;text-align:center;padding:20px}
 </head>
 
 <body>
-<header>
-<img src="Kclogo.jpeg">
-<h1>Karthick Coirs</h1>
-<p>Premium Cocopeat & Coir Products Manufacturer</p>
+<header style="
+background:linear-gradient(rgba(0,0,0,.6),rgba(0,0,0,.6)),
+url('Lowec.jpeg');
+background-size:cover;
+background-position:center;
+color:white;
+padding:70px 20px;
+text-align:center;">
+
+<img src="Kclogo.jpeg" style="width:120px;background:white;padding:10px;border-radius:50%;margin-bottom:20px;">
+
+<h1 style="font-size:42px;letter-spacing:2px;">KARTHICK COIRS</h1>
+
+<p style="font-size:20px;margin-top:10px;">
+Premium Cocopeat & Coir Products
+</p>
+
+<p style="font-size:16px;color:#a5f5b3;">
+Manufacturer & Exporter • Palani, Tamil Nadu
+</p>
+
 </header>
 
 <section>
